k8s_selenium_grid.yml
#https://sahajamit.medium.com/spinning-up-your-own-scalable-selenium-grid-in-kubernetes-part-1-e4017bac68f4

apiVersion: v1
kind: Service
metadata:
  name: selenium-hub
  labels:
    name: selenium-hub
spec:
  selector:
    app: selenium-hub
  ports:
    - name: web
      protocol: TCP
      port: 4444
      targetPort: 4444
    - name: node
      protocol: TCP
      port: 5555
      targetPort: 5555

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: selenium-hub-deployment
  labels:
    app: selenium-hub
    name: selenium-hub
spec:
  replicas: 1
  selector:
    matchLabels:
      app: selenium-hub
  template:
    metadata:
      labels:
        app: selenium-hub
    spec:
      containers:
        - name: selenium-hub
          image: selenium/hub:latest
          ports:
            - containerPort: 4444
              protocol: TCP
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: selenium-ingress
  annotations:
    nginx.ingress.kubernetes.io: /$1
spec:
  rules:
    - host: my-selenium-grid.com
      http:
        paths:
          - path: /
            backend:
              serviceName: selenium-hub-deployment
              servicePort: 4444

---
apiVersion: v1
kind: Service
metadata:
  name: selenium-node-chrome
  labels:
    name: selenium-node-chrome
spec:
  selector:
    app: selenium-node-chrome
    browser: chrome
  ports:
    - name: nodeport
      protocol: TCP
      port: 5555
      targetPort: 5555
    - name: node-port-grid
      protocol: TCP
      port: 4444
      targetPort: 4444
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: selenium-node-chrome-deployment
  labels:
    app: selenium-node-chrome
    name: selenium-node-chrome
spec:
  replicas: 1
  selector:
    matchLabels:
      app: selenium-node-chrome
  template:
    metadata:
      labels:
        app: selenium-node-chrome
    spec:
      containers:
        - name: selenium-node-chrome
          image: selenium/node-chrome:3.141.59-xenon
          ports:
            - containerPort: 4444
              protocol: TCP
            - containerPort: 5555
              protocol: TCP
          volumeMounts:
            - name: dshm
              mountPath: /dev/shm
      volumes:
        - name: dshm
          emptyDir: { "medium": "Memory" }
